[gd_scene load_steps=5 format=3 uid="uid://cqo03y46lsise"]

[ext_resource type="Script" uid="uid://cerxhqhc88ke7" path="res://UI/menus/main.gd" id="1_vnck2"]
[ext_resource type="Theme" uid="uid://durn6bdwy26ag" path="res://UI/default_theme.tres" id="2_emhnf"]
[ext_resource type="FontFile" uid="uid://25tkauvypjvj" path="res://Assets/Early GameBoy.ttf" id="3_uw6j2"]

[sub_resource type="LabelSettings" id="LabelSettings_whbce"]
font_size = 62

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_emhnf")
script = ExtResource("1_vnck2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_emhnf")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_emhnf")
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_emhnf")

[node name="TitleContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_emhnf")
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 50

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme = ExtResource("2_emhnf")
text = "Astramental"
label_settings = SubResource("LabelSettings_whbce")
horizontal_alignment = 1

[node name="PlayerNameContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_emhnf")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/PlayerNameContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/PlayerNameContainer/HBoxContainer"]
layout_mode = 2
text = "Player Name"
vertical_alignment = 1

[node name="PlayerName" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/PlayerNameContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../../../HostButtonContainer/HostButton")
focus_next = NodePath("../../../HostButtonContainer/HostButton")
theme = ExtResource("2_emhnf")
placeholder_text = "Player name"
keep_editing_on_text_submit = true
deselect_on_focus_loss_enabled = false

[node name="HostButtonContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_emhnf")

[node name="HostButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HostButtonContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_neighbor_top = NodePath("../../PlayerNameContainer/HBoxContainer/PlayerName")
focus_neighbor_bottom = NodePath("../../JoinGameContainer/HBoxContainer/IPInput")
focus_next = NodePath("../../JoinGameContainer/HBoxContainer/JoinButton")
focus_previous = NodePath("../../PlayerNameContainer/HBoxContainer/PlayerName")
theme = ExtResource("2_emhnf")
text = "Host Game"

[node name="JoinGameContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_emhnf")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/JoinGameContainer"]
layout_mode = 2
theme = ExtResource("2_emhnf")

[node name="JoinButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/JoinGameContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../../HostButtonContainer/HostButton")
focus_neighbor_right = NodePath("../IPInput")
focus_neighbor_bottom = NodePath("../../../OptionsButtonContainer/OptionsButton")
focus_next = NodePath("../IPInput")
theme = ExtResource("2_emhnf")
text = "Join Game"

[node name="IPInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/JoinGameContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_neighbor_left = NodePath("../JoinButton")
focus_neighbor_top = NodePath("../../../HostButtonContainer/HostButton")
focus_neighbor_bottom = NodePath("../../../OptionsButtonContainer/OptionsButton")
focus_next = NodePath("../../../OptionsButtonContainer/OptionsButton")
focus_previous = NodePath("../JoinButton")
theme = ExtResource("2_emhnf")
theme_override_fonts/font = ExtResource("3_uw6j2")
theme_override_font_sizes/font_size = 21
placeholder_text = "127.0.0.1"
keep_editing_on_text_submit = true
deselect_on_focus_loss_enabled = false

[node name="OptionsButtonContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_emhnf")

[node name="OptionsButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/OptionsButtonContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_neighbor_top = NodePath("../../JoinGameContainer/HBoxContainer/IPInput")
focus_neighbor_bottom = NodePath("../../ExitContainer/ExitButton")
focus_next = NodePath("../../ExitContainer/ExitButton")
focus_previous = NodePath("../../JoinGameContainer/HBoxContainer/IPInput")
theme = ExtResource("2_emhnf")
text = "Options"

[node name="ExitContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_emhnf")

[node name="ExitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ExitContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_neighbor_top = NodePath("../../OptionsButtonContainer/OptionsButton")
focus_previous = NodePath("../../OptionsButtonContainer/OptionsButton")
theme = ExtResource("2_emhnf")
text = "Exit Game"

[node name="EventLog" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_emhnf")
scroll_following = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="focus_entered" from="Panel/MarginContainer/VBoxContainer/PlayerNameContainer/HBoxContainer/PlayerName" to="." method="_on_player_name_focus_entered"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HostButtonContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/JoinGameContainer/HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="focus_entered" from="Panel/MarginContainer/VBoxContainer/JoinGameContainer/HBoxContainer/IPInput" to="." method="_on_ip_input_focus_entered"]
[connection signal="text_submitted" from="Panel/MarginContainer/VBoxContainer/JoinGameContainer/HBoxContainer/IPInput" to="." method="_on_ip_input_text_submitted"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/OptionsButtonContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ExitContainer/ExitButton" to="." method="_on_exit_button_pressed"]
